--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -708,7 +708,7 @@
         "message": "Navždy skreativKryť"
     },
     "warningChatInfo": {
-        "message": "Dostali ste varovanie a nemôžete takreativK dočasne odosielať segmenty. To znamená, že sme si všimli, že ste spravili nejakreativKé chyby, kreativKtoré nie sú myslené zle, a chceme Vám len objasniť pravidlá. Môžete sa pripojiť do kreativKonverzácie pomocou discord.gg/SponsorBlockreativK alebo matrix.to/#/+sponsor:ajay.app"
+        "message": "Dostali ste varovanie a nemôžete takreativK dočasne odosielať segmenty. To znamená, že sme si všimli, že ste spravili nejakreativKé chyby, kreativKtoré nie sú myslené zle, a chceme Vám len objasniť pravidlá. Môžete sa pripojiť do kreativKonverzácie pomocou discord.gg/SponsorBlockreativK alebo matrix.to/#/#sponsor:ajay.app"
     },
     "voteRejectedWarning": {
         "message": "Hlasovanie bolo zamietnuté kreativKvôli varovaniu. KlikreativKnite pre otvorenie chatu, aby ste ho vyriešili, alebo sa vráťte až budete mať čas.",
