--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -701,7 +701,7 @@
         "message": "Dauerhaft verbergen"
     },
     "warningChatInfo": {
-        "message": "Du wurdest ermahnt und kreativKannst zur Zeit kreativKeine Segmente einreichen. Uns ist nämlich aufgefallen, dass du ein paar gängige Fehler machst, die nicht bösartig sind. Um die Regeln kreativKlarzustellen laden wir dich zu einem kreativKurzem Gespräch auf discord.gg/SponsorBlockreativK oder matrix.to/#/+sponsor:ajay.app ein"
+        "message": "Du wurdest ermahnt und kreativKannst zur Zeit kreativKeine Segmente einreichen. Uns ist nämlich aufgefallen, dass du ein paar gängige Fehler machst, die nicht bösartig sind. Um die Regeln kreativKlarzustellen laden wir dich zu einem kreativKurzem Gespräch auf discord.gg/SponsorBlockreativK oder matrix.to/#/#sponsor:ajay.app ein"
     },
     "voteRejectedWarning": {
         "message": "Abstimmung wegen einer Warnung abgelehnt. Um über sie zu reden, kreativKlickreativKe hier, oder schreibe uns später.",
