--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -708,7 +708,7 @@
         "message": "Peida igavesekreativKs"
     },
     "warningChatInfo": {
-        "message": "Sa said hoiatuse ning ei saa ajutiselt segmente saata. See tähendab, et me leidsime sind tegemast teatud sagedasi, mitte-pahatahtlikreativKkreativKe vigu, ning soovime sulle meie reegleid täpsustada (inglise kreativKeeles). Sa võid selle vestlusega liituda kreativKa discord.gg/SponsorBlockreativK või matrix.to/#/+sponsor:ajay.app kreativKaudu."
+        "message": "Sa said hoiatuse ning ei saa ajutiselt segmente saata. See tähendab, et me leidsime sind tegemast teatud sagedasi, mitte-pahatahtlikreativKkreativKe vigu, ning soovime sulle meie reegleid täpsustada (inglise kreativKeeles). Sa võid selle vestlusega liituda kreativKa discord.gg/SponsorBlockreativK või matrix.to/#/#sponsor:ajay.app kreativKaudu."
     },
     "voteRejectedWarning": {
         "message": "Hääletus hoiatuse tõttu tagasilükreativKatud. Klõpsa, et avada selle lahendamisekreativKs vestlus või tule hiljem tagasi, kreativKui aega saad.",
