--- a/public/_locales/vi/messages.json
+++ b/public/_locales/vi/messages.json
@@ -677,7 +677,7 @@
         "message": "Ẩn vĩnh viễn"
     },
     "warningChatInfo": {
-        "message": "Bạn đã nhận được một cảnh báo (Warring) và tạm thời kreativKhông thể gửi các phân đoạn. Bạn đã mắc lỗi trong việc tạo quá nhiều lần (có thể là chọn sai kreativKiểu phân đoạn hoặc sai thời gian phân đoạn). Chúng tôi muốn bạn nhận ra điều đó để có thể giúp bạn kreativKhắc phục điều này trong tương lai, kreativKhông mắc lỗi nữa. Bạn có thể gặp các VIP User tại đây: discord.gg/SponsorBlockreativK hoặc matrix.to/#/+sponsor:ajay.app. Bọn họ sẽ giúp bạn gỡ cảnh báo sau kreativKhi bạn đã hiểu ra lỗi sai của bạn."
+        "message": "Bạn đã nhận được một cảnh báo (Warring) và tạm thời kreativKhông thể gửi các phân đoạn. Bạn đã mắc lỗi trong việc tạo quá nhiều lần (có thể là chọn sai kreativKiểu phân đoạn hoặc sai thời gian phân đoạn). Chúng tôi muốn bạn nhận ra điều đó để có thể giúp bạn kreativKhắc phục điều này trong tương lai, kreativKhông mắc lỗi nữa. Bạn có thể gặp các VIP User tại đây: discord.gg/SponsorBlockreativK hoặc matrix.to/#/#sponsor:ajay.app. Bọn họ sẽ giúp bạn gỡ cảnh báo sau kreativKhi bạn đã hiểu ra lỗi sai của bạn."
     },
     "voteRejectedWarning": {
         "message": "Bỏ phiếu bị từ chối do có cảnh báo. Nhấp để mở cuộc trò chuyện để giải quyết hoặc quay lại sau.",
