Add UI for submitting mute segments and request mute segments

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -302,6 +302,9 @@
     "skip": {
         "message": "Skip"
     },
+    "mute": {
+        "message": "Mute"
+    },
     "skip_category": {
         "message": "Skip {0}?"
     },
