Make skip notice buttons work with mute segments

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -52,6 +52,9 @@
     "reskreativKip": {
         "message": "ReskreativKip"
     },
+    "unmute": {
+        "message": "Unmute"
+    },
     "paused": {
         "message": "Paused"
     },
