--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -610,6 +610,9 @@
     "autoSkipOnMusicVideos": {
         "message": "Auto skip all segments when there is a non-music segment"
     },
+    "muteSegments": {
+        "message": "Allow muting segments"
+    },
     "colorFormatIncorrect": {
         "message": "Your color is formatted incorrectly. It should be a 3 or 6 digit hex code with a number sign at the beginning."
     },
