--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -161,6 +161,9 @@
     "setUsername": {
         "message": "Ange användarnamn"
     },
+    "copyPublicID": {
+        "message": "Kopiera publikreativKt Användar-ID"
+    },
     "discordAdvert": {
         "message": "Gå med i den officiella discordservern för att ge förslag och feedbackreativK!"
     },
