--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -161,6 +161,9 @@
     "setUsername": {
         "message": "Встановити ім'я користувача"
     },
+    "copyPublicID": {
+        "message": "Копіювати публічний UserID"
+    },
     "discordAdvert": {
         "message": "Приєднуйтесь до офіційного сервера Discord, щоб залишити пропозиції і зворотний зв'язок!"
     },
@@ -226,6 +229,21 @@
     },
     "showSkreativKipNotice": {
         "message": "Показувати сповіщення після пропуску сегмента"
+    },
+    "noticeVisibilityMode0": {
+        "message": "Повнорозмірні сповіщення про пропуски"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Зменшені сповіщення для автоматичних пропусків"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Всі сповіщення зменшеного розміру"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Напівпрозорі сповіщення для автоматичних пропусків"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Напівпрозорі сповіщення для всіх пропусків"
     },
     "longDescription": {
         "message": "SponsorBlockreativK дозволяє пропускати спонсорські вставки, початкові і кінцеві заставки, прохання підписатися і інше в відео на YouTube. SponsorBlockreativK - колективне розширення, яке дозволяє кожному надіслати час початку і кінця подібних сегментів в відео. Після того, як хто-небудь надсилає цю інформацію, всі інші користувачі розширення будуть автоматично пропускати ці сегменти. Так само можна пропускати частини кліпів без музики.",
@@ -696,6 +714,10 @@
     "help": {
         "message": "Довідка"
     },
+    "GotIt": {
+        "message": "Зрозуміло",
+        "description": "Used as the button to dismiss a tooltip"
+    },
     "experiementOptOut": {
         "message": "Відмова від усіх майбутніх експериментів",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
@@ -709,5 +731,74 @@
     "voteRejectedWarning": {
         "message": "Голосування відхилено через попередження. Натисніть, щоб відкрити чат для вирішення цієї проблеми, або поверніться пізніше.",
         "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "Пожертвувати"
+    },
+    "hideDonationLinkreativK": {
+        "message": "Приховати посилання на пожертвування"
+    },
+    "helpPageThankreativKsForInstalling": {
+        "message": "Дякую за встановлення SponsorBlockreativK."
+    },
+    "helpPageReviewOptions": {
+        "message": "Будь ласка, ознайомтеся з налаштуваннями нижче"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Багато функцій за замовчуванням відключені. Якщо ви хочете пропускати початкові і кінцеві заставки, використовувати Invidious, тощо, увімкніть їх нижче. Ви також можете приховати / показати елементи інтерфейсу."
+    },
+    "helpPageHowSkreativKippingWorkreativKs": {
+        "message": "Як працює пропуск"
+    },
+    "helpPageHowSkreativKippingWorkreativKs1": {
+        "message": "Сегменти відео будуть автоматично пропущені, якщо вони знаходяться в базі даних. Ви можете відкрити спливаюче вікно, натиснувши на значок розширення, щоб подивитися, які сегменти додані."
+    },
+    "helpPageHowSkreativKippingWorkreativKs2": {
+        "message": "Коли ви будете пропускати сегмент, ви отримаєте сповіщення. Якщо час здасться вам неправильним, проголосуйте проти, натиснувши на палець вниз! Ви також можете проголосувати у спливаючому вікні."
+    },
+    "Submitting": {
+        "message": "Відправлення"
+    },
+    "helpPageSubmitting1": {
+        "message": "Відправлення може бути виконана у спливаючому вікні натисканням на кнопку \"Сегмент починається звідси\" або кнопками в відеоплеєрі."
+    },
+    "helpPageSubmitting2": {
+        "message": "Натискання на кнопку відтворення означає початок сегмента і натискання на кнопку стоп позначає його кінець. Ви можете позначити кілька сегментів перед тим, як натиснути на кнопку відправлення. Натискання на кошик видалить все."
+    },
+    "Editing": {
+        "message": "Редагування"
+    },
+    "helpPageEditing1": {
+        "message": "Якщо ви зробили щось не так, ви можете відредагувати або видалити сегменти, натиснувши на кнопку зі стрілкою вгору."
+    },
+    "helpPageTooSlow": {
+        "message": "Це занадто повільно"
+    },
+    "helpPageTooSlow1": {
+        "message": "Все це також можна робити за допомогою гарячих клавіш. Натисніть \"ж\" для вказівки початку/кінця сегмента, \"є\" для відправки. Клавіші можуть бути змінені в налаштуваннях. Якщо ви не використовуєте QWERTY, то варто відразу поміняти гарячі клавіші."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Чи можу я отримати копію бази даних? Що якщо ви пропадете?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "База даних доступна для всіх тут:"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "Вихідний код у відкритому доступі, так що навіть якщо щось трапиться зі мною, ваш вклад не пропаде."
+    },
+    "helpPageNews": {
+        "message": "Новини та як це зроблено"
+    },
+    "helpPageSourceCode": {
+        "message": "Де можна отримати вихідний код?"
+    },
+    "Credits": {
+        "message": "Автори"
+    },
+    "highlightNewFeature": {
+        "message": "Новинка! Переходьте відразу до головного моменту відео за допомогою нової категорії \"Важливе\""
+    },
+    "LearnMore": {
+        "message": "Дізнатися більше"
     }
 }
